Release DBFlute-0.9.6.7